--- a/.github/workflows/melon-ticket-check.yml
+++ b/.github/workflows/melon-ticket-check.yml
@@ -17,5 +17,5 @@ jobs:
           product-id: 211217   
           schedule-id: 100001     
           seat-id: 1_0        
-          slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          slack-incoming-webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
           message: '@everyone 🎟️ 5월 24일 NCT DREAM 팬미팅 티켓 열렸습니다! 바로 예매하세요!'
