--- a/.github/workflows/melon-ticket-check.yml
+++ b/.github/workflows/melon-ticket-check.yml
@@ -1,21 +1,21 @@
-name: m-ti-checker
+name: melon-ticket-checker
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  
-  workflow_dispatch:       
-
+    - cron: '*/5 * * * *' 
+  workflow_dispatch:      
+  
 jobs:
-  check-tickets:
+  check-ticket:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 3
 
     steps:
-      - name: Check Tickets
+      - name: Run Melon Ticket Checker
         uses: mooyoul/melon-ticket-actions@v1.1.0
         with:
           product-id: 211217   
-          schedule-id: 100001     
-          seat-id: 1_0        
+          schedule-id: 100003        
+          seat-id: 1_0                
           slack-incoming-webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
-          message: '@everyone 🎟️ 5월 24일 NCT DREAM 팬미팅 티켓 열렸습니다! 바로 예매하세요!'
+          message: '예매 가능 확인! NCT DREAM 토요일 회차 🔥'
