--- a/.github/workflows/melon-ticket-check.yml
+++ b/.github/workflows/melon-ticket-check.yml
@@ -2,9 +2,9 @@ name: melon-ticket-checker
 
 on:
   schedule:
-    - cron: '*/5 * * * *' 
+    - cron: '*/5 * * * *'
   workflow_dispatch:
-  
+
 jobs:
   check-ticket:
     runs-on: ubuntu-latest
@@ -17,5 +17,6 @@ jobs:
           product-id: 211217
           schedule-id: 100001
           seat-id: 1_0
-          slack-incoming-webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
-          message: '예매 가능 확인'
+          slack-incoming-webhook-url: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          message: '@everyone 예매 가능! 빨리 달려~ 🚀🔥'
+
