--- a/.github/workflows/melon-ticket-checker.yml
+++ b/.github/workflows/melon-ticket-checker.yml
@@ -15,5 +15,5 @@ jobs:
           product-id: '211217'
           schedule-id: '100001'
           seat-id: '1_0'
-          slack-incoming-webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
           message: '예매 시도 중...'
