--- a/.github/workflows/melon-ticket-checker.yml
+++ b/.github/workflows/melon-ticket-checker.yml
@@ -1,19 +1,16 @@
 name: Melon Ticket Checker
-
 on:
   schedule:
-    - cron: '0 0 * * *' 
-  workflow_dispatch: 
-
+    - cron: '*/5 * * * *' # 5분마다 실행
 jobs:
-  check-ticket:
+  check-tickets:
     runs-on: ubuntu-latest
     steps:
-      - name: Run Melon Ticket Actions
+      - name: Check Tickets
         uses: mooyoul/melon-ticket-actions@v1.1.0
         with:
-          product-id: '211217'
-          schedule-id: '100001'
-          seat-id: '1_0'
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-          message: '예매 시도 중...'
+          product-id: 204755
+          schedule-id: 100001
+          seat-id: 1_0
+          slack-incoming-webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
+          message: '티켓이 판매 중입니다!'
