--- a/.github/workflows/melon-ticket-checker.yml
+++ b/.github/workflows/melon-ticket-checker.yml
@@ -1,7 +1,8 @@
 name: melon-ticket-checker
 on:
   schedule:
-    - cron: '*/5 * * * *' 
+    - cron: '*/5 * * * *'
+  workflow_dispatch:
 jobs:
   check-tickets:
     runs-on: ubuntu-latest
